--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
-
-<html>
-  <head>
-    <link rel="stylesheet" href="lib/style.css">
-    <script src="lib/script.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Calculator</title>
     <style>
       button {
         width: 70px;
@@ -15,7 +15,7 @@
         outline: none;
       }
     </style>
-  </head>
+</head>
 
   <body>
     <div style="text-align: center; border-style: solid;">
